--- a/src/bubbles.css
+++ b/src/bubbles.css
@@ -1,5 +1,5 @@
 /* MESSAGES  - - - - - - - - - - - - - - - - - - - - - */
-.contents_c19a55>.messageContent_c19a55 {
+.c19a557985eb7793-contents>.c19a557985eb7793-messageContent {
   background-color: rgba(255, 255, 255, 0.075);
   width: fit-content;
   margin-left: 0px !important;
@@ -11,30 +11,30 @@
   word-wrap: normal;
 }
 
-.groupStart__5126c .messageContent_c19a55 {
+._5126c0cd07f243a0-groupStart .c19a557985eb7793-messageContent {
   border-radius: 10px 10px 10px 0px;
 }
 
-.message__5126c,
-.contents_c19a55 {
+._5126c0cd07f243a0-message,
+.c19a557985eb7793-contents {
   /* position: absolute; */
   max-width: 95% !important;
   min-width: 95% !important;
 }
 
-.buttonContainer_c19a55 .container__040f0 {
+.c19a557985eb7793-buttonContainer ._040f07d21e1fb0d6-container {
   right: 20px;
 }
 
 /* More ddex4-like timestamps */
-.header_c19a55 {
+.c19a557985eb7793-header {
   margin-left: 10px;
   margin-bottom: 4px;
   margin-right: 10px;
 }
 
 /*
-  .reactions__23977 {
+  ._23977d5b7cef7361-reactions {
     margin-bottom: -12px;
   
     width: 100% !important;
@@ -45,8 +45,8 @@
     >div {
       position: relative;
   
-      .reaction__23977,
-      .reactionBtn__23977 {
+      ._23977d5b7cef7361-reaction,
+      ._23977d5b7cef7361-reactionBtn {
         backdrop-filter: blur(16px);
       }
   
@@ -138,76 +138,76 @@
     }
   }
   */
-.reactionInner__23977[aria-label*=", 1 "] .reactionCount__23977 {
+._23977d5b7cef7361-reactionInner[aria-label*=", 1 "] ._23977d5b7cef7361-reactionCount {
   display: none !important;
 }
 
 /* bring pfp to bottom of messages */
-.avatar_c19a55,
-.avatarDecoration_c19a55 {
+.c19a557985eb7793-avatar,
+.c19a557985eb7793-avatarDecoration {
   bottom: 8px;
 }
 
-.messageSpine_c19a55:before,
-.repliedMessageClickableSpine_c19a55 {
+.c19a557985eb7793-messageSpine:before,
+.c19a557985eb7793-repliedMessageClickableSpine {
   bottom: -14px;
 }
 
-.messageListItem__5126c[data-is-self="true"] {
+._5126c0cd07f243a0-messageListItem[data-is-self="true"] {
   align-items: end;
   align-content: end;
   justify-content: end;
   justify-items: end;
 
-  .message__5126c {
+  ._5126c0cd07f243a0-message {
     /* padding-left: 100%; */
     padding-right: var(--custom-message-margin-left-content-cozy) !important;
 
-    .contents_c19a55 {
+    .c19a557985eb7793-contents {
       justify-items: end;
     }
 
-    .avatar_c19a55 {
+    .c19a557985eb7793-avatar {
       left: auto !important;
       right: var(--custom-message-margin-horizontal);
     }
 
-    .avatarDecoration_c19a55 {
+    .c19a557985eb7793-avatarDecoration {
       left: auto !important;
       right: calc(var(--custom-message-margin-horizontal) - var(--custom-message-avatar-decoration-size) / 2 + var(--custom-message-avatar-size) / 2);
     }
 
-    .contents_c19a55>.messageContent_c19a55 {
+    .c19a557985eb7793-contents>.c19a557985eb7793-messageContent {
       border-radius: 10px 0px 0px 10px;
       background-color: var(--brand-500);
     }
 
-    &.groupStart__5126c .messageContent_c19a55 {
+    &._5126c0cd07f243a0-groupStart .c19a557985eb7793-messageContent {
       border-radius: 10px 10px 0px 10px;
     }
 
-    .container_b7e1cb>* {
+    .b7e1cb0370c2dd0e-container>* {
       justify-self: end !important;
       align-self: end !important;
     }
 
-    .container__8e577 {
+    ._8e5774737a01bb03-container {
       justify-self: end;
     }
 
-    .visualMediaItemContainer_f4758a {
+    .f4758a8d6346d18b-visualMediaItemContainer {
       width: auto;
     }
 
-    .contents_c19a55 {
+    .c19a557985eb7793-contents {
       justify-self: end;
     }
 
-    &.hasReply_c19a55 {
+    &.c19a557985eb7793-hasReply {
       padding-top: 22px;
     }
 
-    .repliedMessage_c19a55 {
+    .c19a557985eb7793-repliedMessage {
       position: absolute;
       flex-direction: row;
       top: 0px;
@@ -217,7 +217,7 @@
       max-width: calc(100% - var(--custom-guild-sidebar-width) - var(--custom-guild-list-width) + 32px);
     }
 
-    .repliedMessageClickableSpine_c19a55 {
+    .c19a557985eb7793-repliedMessageClickableSpine {
       right: calc(var(--chat-avatar-size) / 2 * -1 + var(--gutter) * -1 - 4px);
       left: 100%;
       bottom: -14px;
@@ -231,7 +231,7 @@
     }
 
     /* For some reason the class above doesn't apply for me, so this exists */
-    .messageSpine_c19a55:before {
+    .c19a557985eb7793-messageSpine:before {
       right: calc(var(--chat-avatar-size) / 2 * -1 + var(--gutter) * -1 - 18px);
       left: 100%;
       bottom: -14px;
@@ -246,31 +246,31 @@
     }
   }
 
-  .buttonContainer_c19a55 {
+  .c19a557985eb7793-buttonContainer {
     right: auto;
     left: 0;
 
-    .container__040f0 {
+    ._040f07d21e1fb0d6-container {
       right: auto;
       left: 56px;
     }
   }
 
-  .reactions__23977 {
+  ._23977d5b7cef7361-reactions {
     align-content: flex-end;
     justify-content: flex-end;
   }
 
-  .cozy_c19a55 .header_c19a55 {
+  .c19a557985eb7793-cozy .c19a557985eb7793-header {
     display: flex;
     flex-direction: row-reverse;
     align-items: baseline;
   }
-  .cozy_c19a55 .headerText_c19a55 {
+  .c19a557985eb7793-cozy .c19a557985eb7793-headerText {
     margin-right: 0;
     margin-left: 0.25em;
   }
-  .cozy_c19a55 .timestamp_c19a55 {
+  .c19a557985eb7793-cozy .c19a557985eb7793-timestamp {
     margin-left: 0;
     margin-right: 0.25em;
   }
